--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -79,10 +79,8 @@ esp32s2 = ["esp32s2/rt", "xtensa", "xtensa-lx/esp32s2", "xtensa-lx-rt/esp32s2", 
 esp32s3 = ["esp32s3/rt", "xtensa", "xtensa-lx/esp32s3", "xtensa-lx-rt/esp32s3", "esp-synopsys-usb-otg", "usb-device", "procmacros/esp32s3"]
 
 # Crystal frequency selection (ESP32 and ESP32-C2 only!)
-esp32_26mhz   = []
-esp32_40mhz   = []
-esp32c2_26mhz = []
-esp32c2_40mhz = []
+xtal_26mhz = []
+xtal_40mhz = []
 
 # PSRAM support
 psram_2m = []
