--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -50,7 +50,7 @@ ssd1306            = "0.8.1"
 static_cell        = { version = "1.2.0", features = ["nightly"] }
 
 [features]
-default            = ["rt", "vectored", "xtal40mhz"]
+default            = ["rt", "vectored", "xtal_40mhz"]
 async              = ["esp-hal-common/async"]
 bluetooth          = []
 debug              = ["esp-hal-common/debug"]
@@ -60,8 +60,8 @@ log                = ["esp-hal-common/log"]
 rt                 = []
 ufmt               = ["esp-hal-common/ufmt"]
 vectored           = ["esp-hal-common/vectored"]
-xtal40mhz          = ["esp-hal-common/esp32_40mhz"]
-xtal26mhz          = ["esp-hal-common/esp32_26mhz"]
+xtal_26mhz         = ["esp-hal-common/xtal_26mhz"]
+xtal_40mhz         = ["esp-hal-common/xtal_40mhz"]
 
 # Embassy support
 embassy                    = ["esp-hal-common/embassy"]
