--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,6 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
-# Other
-**/settings.json
-
-# wokwi related files
+# Wokwi related files
 diagram.json
 wokwi.toml
-
-# vscode
-.vscode
